company section complete

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 </head>
 
-<body class="m-0 p-0">
-    <header class="bg-slate-100 h-screen">
-        <nav class="nab-containe flex justify-between w-4/5 m-auto pt-4">
+<body>
+    <header class="bg-slate-200 h-screen">
+        <nav class="nab-container items-center  flex justify-between w-4/5 m-auto pt-4">
             <h2 class="text-xl font-medium font "><span class="text-pink-600">PEBISINIS</span> ULUNG</h2>
             <div class="flex items-center space-x-6">
                 <a href="">Services</a>
@@ -22,17 +22,45 @@
                 <button class="border border-green-600 py-2 px-4 font-medium rounded-3xl text-base ">Let's Talk</button>
             </div>
         </nav>
-        <div class="hero w-4/5 m-auto mt-40">
+        <div class="hero w-4/5 m-auto mt-28 flex justify-between  items-center gap-10 ">
             <div>
-                <h1 class="text-4xl font-medium mb-3">Reach Your Business <br>
-                Goals in Record Time</h1>
-                <p class="text-pink-600 mb-5`">Support small business and Join the nationwide movement to <br>encourage commercial support for the millions of minority <br>owned businesses helping world economy.</p>
-                <button class="px-6 py-4 text-white text-lg font-medium rounded-2xl bg-pin600.
-                ">Get Started</button>
+                <h1 class="text-4xl font-medium mb-6">Reach Your Business <br>
+                    Goals in Record Time</h1>
+                <p class="text-pink-600 mb-5">Support small business and Join the nationwide movement to <br>encourage
+                    commercial support for the millions of minority <br>owned businesses helping world economy.</p>
 
+                <button class="px-6 py-2 text-white text-lg font-medium rounded-3xl shadow-md bg-pink-600
+                ">Get Started</button>
+            </div>
+            <div class="relative w-[450px] h-[350px]">
+
+                <img class="w-[300px] absolute -top-[20px] z-30 right-24" src="/images/KKK-removebg-preview.png" alt="">
+                <img class=" w-[500px] absolute z-20  right-18
+                -bottom-12
+                " src="/images/back-5.png" alt="">
             </div>
         </div>
     </header>
+    <main>
+        <div class="company bg-[#ffffff] flex justify-around  my-4">
+            <div class="items flex  gap-2 items-center">
+                <img class="w-12" src="/images/microsoft.png" alt="">
+                <h1 class="text-2xl font-bold">Microsoft</h1>
+            </div>
+            <div class="items flex gap-2 items-center justify-center">
+                <img class="w-28" src="/images/google.png" alt="">
+                <!-- <h1 class="text-3xl font-bold">Microsoft</h1> -->
+            </div>
+            <div class="items flex gap-2 items-center">
+                <img class="w-12" src="/images/alibaba-removebg-preview.png" alt="">
+                <h1 class="text-2xl font-bold">Alibaba</h1>
+            </div>
+            <div class="items flex gap-2 items-center">
+                <img class="w-12" src="/images/apple-logo-04.png" alt="">
+                <h1 class="text-2xl font-bold">Apple</h1>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
