services section complite

--- a/index.html
+++ b/index.html
@@ -42,22 +42,51 @@
         </div>
     </header>
     <main>
-        <div class="company bg-[#ffffff] flex justify-around  my-4">
-            <div class="items flex  gap-2 items-center">
-                <img class="w-12" src="/images/microsoft.png" alt="">
-                <h1 class="text-2xl font-bold">Microsoft</h1>
+        <div class="company bg-[#ffffff]">
+            <div class="flex justify-around  my-4">
+                <div class="items flex  gap-2 items-center">
+                    <img class="w-12" src="/images/microsoft.png" alt="">
+                    <h1 class="text-2xl font-bold">Microsoft</h1>
+                </div>
+                <div class="items flex gap-2 items-center justify-center">
+                    <img class="w-28" src="/images/google.png" alt="">
+                    <!-- <h1 class="text-3xl font-bold">Microsoft</h1> -->
+                </div>
+                <div class="items flex gap-2 items-center">
+                    <img class="w-12" src="/images/alibaba-removebg-preview.png" alt="">
+                    <h1 class="text-2xl font-bold">Alibaba</h1>
+                </div>
+                <div class="items flex gap-2 items-center">
+                    <img class="w-12" src="/images/apple-logo-04.png" alt="">
+                    <h1 class="text-2xl font-bold">Apple</h1>
+                </div>
             </div>
-            <div class="items flex gap-2 items-center justify-center">
-                <img class="w-28" src="/images/google.png" alt="">
-                <!-- <h1 class="text-3xl font-bold">Microsoft</h1> -->
-            </div>
-            <div class="items flex gap-2 items-center">
-                <img class="w-12" src="/images/alibaba-removebg-preview.png" alt="">
-                <h1 class="text-2xl font-bold">Alibaba</h1>
-            </div>
-            <div class="items flex gap-2 items-center">
-                <img class="w-12" src="/images/apple-logo-04.png" alt="">
-                <h1 class="text-2xl font-bold">Apple</h1>
+            <div class="services w-4/5 m-auto pt-20 flex justify-between items-center gap-20">
+                <div class="w-1/2 pt-2">
+                    <h3 class="font-bold text-green-600 uppercase ">Service</h3>
+                    <h1 class="text-2xl font-medium pb-2">Our Capabilities</h1>
+                    <p class="text-pink-600">We will bring the breathe of our experience and industry knowledge
+                    to help you succeed
+                    </p>
+                </div>
+                <div class="flex gap-3">
+                    <div class="">
+                        <img class="w-20" src="/images/market.png" alt="">
+                        <h3 class="text-lg font-medium ">Market Forest</h3>
+                        <p class="text-pink-600">Leverage angle framework to provide a roboto hights level syntext world views</p>
+                    </div>
+                    <div class="">
+                        <img class="w-20" src="/images/found-removebg-preview (1).png" alt="">
+                        <h3 class="text-lg font-medium ">Fund Raising</h3>
+                        <p class="text-pink-600">Leverage angle framework to provide a roboto hights level syntext world views</p>
+                    </div>
+                    <div class="">
+                        <img class="w-20" src="/images/cash-flow-removebg-preview.png" alt="">
+                        <h3 class="text-lg font-medium ">Market Forest</h3>
+                        <p class="text-pink-600">Leverage angle framework to provide a roboto hights level syntext world views</p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </main>
