form section complite

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div class="relative w-[450px] h-[350px]">
 
-                <img class="w-[300px] absolute -top-[20px] z-30 right-24" src="/images/KKK-removebg-preview.png" alt="">
+                <img class="w-[300px] absolute -top-[20px] z-30 right-24" src="/images/lady-2.png" alt="">
                 <img class=" w-[500px] absolute z-20  right-18
                 -bottom-12
                 " src="/images/back-5.png" alt="">
@@ -43,7 +43,7 @@
     </header>
     <main>
         <div class="company bg-[#ffffff]">
-            <div class="flex justify-around  my-4">
+            <div class="flex justify-around  my-4 ">
                 <div class="items flex  gap-2 items-center">
                     <img class="w-12" src="/images/microsoft.png" alt="">
                     <h1 class="text-2xl font-bold">Microsoft</h1>
@@ -61,32 +61,56 @@
                     <h1 class="text-2xl font-bold">Apple</h1>
                 </div>
             </div>
-            <div class="services w-4/5 m-auto pt-20 flex justify-between items-center gap-20">
+            <div class="services w-4/5 m-auto pt-20 flex justify-between items-center gap-20 pb-10 border-b-2 ">
                 <div class="w-1/2 pt-2">
                     <h3 class="font-bold text-green-600 uppercase ">Service</h3>
                     <h1 class="text-2xl font-medium pb-2">Our Capabilities</h1>
                     <p class="text-pink-600">We will bring the breathe of our experience and industry knowledge
-                    to help you succeed
+                        to help you succeed
                     </p>
                 </div>
                 <div class="flex gap-3">
                     <div class="">
                         <img class="w-20" src="/images/market.png" alt="">
                         <h3 class="text-lg font-medium ">Market Forest</h3>
-                        <p class="text-pink-600">Leverage angle framework to provide a roboto hights level syntext world views</p>
+                        <p class="text-pink-600">Leverage angle framework to provide a roboto hights level syntext world
+                            views</p>
                     </div>
                     <div class="">
                         <img class="w-20" src="/images/found-removebg-preview (1).png" alt="">
                         <h3 class="text-lg font-medium ">Fund Raising</h3>
-                        <p class="text-pink-600">Leverage angle framework to provide a roboto hights level syntext world views</p>
+                        <p class="text-pink-600">Leverage angle framework to provide a roboto hights level syntext world
+                            views</p>
                     </div>
                     <div class="">
                         <img class="w-20" src="/images/cash-flow-removebg-preview.png" alt="">
                         <h3 class="text-lg font-medium ">Market Forest</h3>
-                        <p class="text-pink-600">Leverage angle framework to provide a roboto hights level syntext world views</p>
+                        <p class="text-pink-600">Leverage angle framework to provide a roboto hights level syntext world
+                            views</p>
                     </div>
                 </div>
 
+            </div>
+            <div class="form  flex justify-between items-center w-4/5 m-auto">
+                <div class="w-[700px] h-[400px] relative">
+                    <div >
+                        <img class="absolute z-20 -left-16" src="/images/lady-1.png" alt="">
+                    </div>
+                    <div class="w-[300px] absolute top-24 left-28 z-10 "> 
+                        <img src="/images/back-8.png" alt="">
+                    </div>
+                </div>
+                <div>
+                    <h5 class="text-green-600 font-medium pb-1">Contact Us</h5>
+                    <h2 class="text-2xl font-medium">Let's Collaborate Now!</h2>
+                    <label for="name" class="text-lg font-medium py-2">Name:</label><br>
+                    <input  type="name" name="name" id="" placeholder="Input your name" class="border border-green-300 w-64 p-2 "><br>
+                    <label for="name" class="text-lg font-medium py-2">Email:</label><br>
+                    <input  type="name" name="name" id="" placeholder="Input your Email" class="border border-green-300 w-64 p-2 "><br><br>
+                    <textarea name="text" id="" class="p-2 w-64 h-28 border border-green-400">Massages</textarea>
+                    <button class="w-28 h-10  bg-pink-600 text-white font-medium rounded-lg p-2 mt-2 text-lg">submit</button>
+
+                </div>
             </div>
         </div>
     </main>
