footer section complite

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
 
             </div>
-            <div class="form  flex justify-between items-center w-4/5 m-auto">
+            <div class="form  flex justify-between items-center w-4/5 m-auto pt-5">
                 <div class="w-[700px] h-[400px] relative">
                     <div >
                         <img class="absolute z-20 -left-16" src="/images/lady-1.png" alt="">
@@ -114,6 +114,22 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="footer-container bg-pink-500">
+            <div class="flex items-center justify-between w-4/5 m-auto">
+                <h2 class="text-xl font-medium font flex justify-between items-center h-[200px] "><span class="text-pink-600">PEBISINIS</span> ULUNG</h2>
+                <p>copyright not allow for Every body and All reverse</p>
+                <div class="flex items-center justify-between gap-2">
+                    <h1 class="text-lg font-bold">social Media</h1>
+                    <div class="flex items-center gap-1">
+                        <img class="w-8" src="/images/facebook.png" alt="">
+                        <img class="w-8" src="/images/linkedin.png" alt="">
+                        <img class="w-8" src="/images/instagram.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
