some img problem solved

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             </div>
             <div class="relative w-[450px] h-[350px]">
 
-                <img class="w-[300px] absolute -top-[20px] z-30 right-24" src="/images/lady-2.png" alt="">
+                <img class="w-[300px] absolute -top-[20px] z-30 right-24" src=images/lady-2.png" alt="">
                 <img class=" w-[500px] absolute z-20  right-18
                 -bottom-12
-                " src="/images/back-5.png" alt="">
+                " src=images/back-5.png" alt="">
             </div>
         </div>
     </header>
@@ -45,19 +45,19 @@
         <div class="company bg-[#ffffff]">
             <div class="flex justify-around  my-4 ">
                 <div class="items flex  gap-2 items-center">
-                    <img class="w-12" src="/images/microsoft.png" alt="">
+                    <img class="w-12" src="images/microsoft.png" alt="">
                     <h1 class="text-2xl font-bold">Microsoft</h1>
                 </div>
                 <div class="items flex gap-2 items-center justify-center">
-                    <img class="w-28" src="/images/google.png" alt="">
+                    <img class="w-28" src="images/google.png" alt="">
                     <!-- <h1 class="text-3xl font-bold">Microsoft</h1> -->
                 </div>
                 <div class="items flex gap-2 items-center">
-                    <img class="w-12" src="/images/alibaba-removebg-preview.png" alt="">
+                    <img class="w-12" src="images/alibaba-removebg-preview.png" alt="">
                     <h1 class="text-2xl font-bold">Alibaba</h1>
                 </div>
                 <div class="items flex gap-2 items-center">
-                    <img class="w-12" src="/images/apple-logo-04.png" alt="">
+                    <img class="w-12" src="images/apple-logo-04.png" alt="">
                     <h1 class="text-2xl font-bold">Apple</h1>
                 </div>
             </div>
@@ -71,19 +71,19 @@
                 </div>
                 <div class="flex gap-3">
                     <div class="">
-                        <img class="w-20" src="/images/market.png" alt="">
+                        <img class="w-20" src="images/market.png" alt="">
                         <h3 class="text-lg font-medium ">Market Forest</h3>
                         <p class="text-pink-600">Leverage angle framework to provide a roboto hights level syntext world
                             views</p>
                     </div>
                     <div class="">
-                        <img class="w-20" src="/images/found-removebg-preview (1).png" alt="">
+                        <img class="w-20" src="images/found-removebg-preview (1).png" alt="">
                         <h3 class="text-lg font-medium ">Fund Raising</h3>
                         <p class="text-pink-600">Leverage angle framework to provide a roboto hights level syntext world
                             views</p>
                     </div>
                     <div class="">
-                        <img class="w-20" src="/images/cash-flow-removebg-preview.png" alt="">
+                        <img class="w-20" src="images/cash-flow-removebg-preview.png" alt="">
                         <h3 class="text-lg font-medium ">Market Forest</h3>
                         <p class="text-pink-600">Leverage angle framework to provide a roboto hights level syntext world
                             views</p>
@@ -94,10 +94,10 @@
             <div class="form  flex justify-between items-center w-4/5 m-auto pt-5">
                 <div class="w-[700px] h-[400px] relative">
                     <div >
-                        <img class="absolute z-20 -left-16" src="/images/lady-1.png" alt="">
+                        <img class="absolute z-20 -left-16" src="images/lady-1.png" alt="">
                     </div>
                     <div class="w-[300px] absolute top-24 left-28 z-10 "> 
-                        <img src="/images/back-8.png" alt="">
+                        <img src="images/back-8.png" alt="">
                     </div>
                 </div>
                 <div>
@@ -122,9 +122,9 @@
                 <div class="flex items-center justify-between gap-2">
                     <h1 class="text-lg font-bold">social Media</h1>
                     <div class="flex items-center gap-1">
-                        <img class="w-8" src="/images/facebook.png" alt="">
-                        <img class="w-8" src="/images/linkedin.png" alt="">
-                        <img class="w-8" src="/images/instagram.png" alt="">
+                        <img class="w-8" src="images/facebook.png" alt="">
+                        <img class="w-8" src="images/linkedin.png" alt="">
+                        <img class="w-8" src="images/instagram.png" alt="">
                     </div>
                 </div>
             </div>
