img problem solved

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             </div>
             <div class="relative w-[450px] h-[350px]">
 
-                <img class="w-[300px] absolute -top-[20px] z-30 right-24" src=images/lady-2.png" alt="">
+                <img class="w-[300px] absolute -top-[20px] z-30 right-24" src="images/lady-2.png" alt="">
                 <img class=" w-[500px] absolute z-20  right-18
                 -bottom-12
-                " src=images/back-5.png" alt="">
+                " src="images/back-5.png" alt="">
             </div>
         </div>
     </header>
@@ -77,13 +77,13 @@
                             views</p>
                     </div>
                     <div class="">
-                        <img class="w-20" src="images/found-removebg-preview (1).png" alt="">
+                        <img class="w-20" src="images/found.png" alt="">
                         <h3 class="text-lg font-medium ">Fund Raising</h3>
                         <p class="text-pink-600">Leverage angle framework to provide a roboto hights level syntext world
                             views</p>
                     </div>
                     <div class="">
-                        <img class="w-20" src="images/cash-flow-removebg-preview.png" alt="">
+                        <img class="w-20" src="images/cash-flow.png" alt="">
                         <h3 class="text-lg font-medium ">Market Forest</h3>
                         <p class="text-pink-600">Leverage angle framework to provide a roboto hights level syntext world
                             views</p>
